Add Cloudflare Web Analytics script to index.html

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
   }
 }
 </script>
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "b5387d4291ef46a09ff8fdd6c799de00"}'>
+  </script>
+  <!-- End Cloudflare Web Analytics -->
 </head>
   <body>
     <div id="root"></div>
